syntax = "proto3";

package meteroid.api.productfamilies.v1;

import "api/productfamilies/v1/models.proto";

message ListProductFamiliesRequest {}

message ListProductFamiliesResponse {
  repeated ProductFamily product_families = 1;
}

message CreateProductFamilyRequest {
  string name = 1;
}

message CreateProductFamilyResponse {
  ProductFamily product_family = 1;
}

message GetProductFamilyByLocalIdRequest {
  string local_id = 1;
}

message GetProductFamilyByLocalIdResponse {
  ProductFamily product_family = 1;
}

service ProductFamiliesService {
  rpc ListProductFamilies(ListProductFamiliesRequest) returns (ListProductFamiliesResponse) {}
  rpc CreateProductFamily(CreateProductFamilyRequest) returns (CreateProductFamilyResponse) {}
  rpc GetProductFamilyByLocalId(GetProductFamilyByLocalIdRequest) returns (GetProductFamilyByLocalIdResponse) {}
}
